Add a README and licence.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ name = "ray_tracer"
 version = "0.1.0"
 authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
