Split the actions apart into tests, and checking formatting.
I think this may end up being slower overall, but I think I would like
them reported separately.

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build and Test
 
 on: [push]
 
@@ -15,6 +15,3 @@ jobs:
 
     - name: Run tests
       run: cargo test --verbose
-
-    - name: Check formatting
-      run: rustup component add rustfmt && cargo fmt --all -- --check
