Setup a first benchmark
I started by using the `benchmark` part of the `test` module. But that
didn't work on stable and it seemed like a shame to require nightly for
the sake of measuring a code base that itself works on stable.

This commit installed `criterion` in order to run benchmarks.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ license = "MIT"
 
 [dependencies]
 assert_approx_eq = "1.1.0"
+criterion = "0.3"
+
+[[bench]]
+name = "simple_world"
+harness = false
